<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.moparforia</groupId>
    <artifactId>playforia-minigolf</artifactId>
    <packaging>pom</packaging>
    <version>2.1.2.0-BETA</version>
    <name>Playforia Minigolf</name>
    <organization>
        <name>Playforia</name>
    </organization>
    <inceptionYear>2002</inceptionYear>
    <description>An online multiplayer minigolf game</description>

    <modules>
        <module>server</module>
        <module>editor</module>
        <module>client</module>
        <module>shared</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.mainClass>test.mainClass</project.mainClass>
        <picocli.version>4.7.6</picocli.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.3</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <transformers>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>${project.mainClass}</mainClass>
                                        <manifestEntries>
                                            <Specification-Title>${project.artifactId}</Specification-Title>
                                            <Specification-Version>${project.version}</Specification-Version>
                                            <Implementation-Title>${project.artifactId}</Implementation-Title>
                                            <Implementation-Version>${project.version}</Implementation-Version>
                                            <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
                                        </manifestEntries>
                                    </transformer>
                                </transformers>
                                <createDependencyReducedPom>false</createDependencyReducedPom>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>sh.tak.appbundler</groupId>
                    <artifactId>appbundle-maven-plugin</artifactId>
                    <version>1.2.0</version>
                </plugin>
                <plugin>
                    <groupId>com.akathist.maven.plugins.launch4j</groupId>
                    <artifactId>launch4j-maven-plugin</artifactId>
                    <version>2.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>4.1.112.Final</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.moparforia</groupId>
                <artifactId>shared</artifactId>
                <version>2.1.2.0-BETA</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <!-- Test dependencies-->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.10.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.12.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>5.12.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.github.marschall</groupId>
                <artifactId>memoryfilesystem</artifactId>
                <version>2.8.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>de.elnarion.util</groupId>
                <artifactId>plantuml-generator-util</artifactId>
                <version>2.4.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
